<resources>
    <string name="app_name">Snowboard Store</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="submit">Submit</string>
    <string name="password">password</string>
    <string name="email_example">email@example.com</string>
    <string name="create_account">Create A New Account</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="welcome_text">Welcome to Snowboard Store!</string>
    <string name="instruction_text">Please click the button below to view the Instructions!</string>
    <string name="instruction_btn">Go To Instructions Screen</string>
    <string name="overview_text">Welcome to the Snowboard Store. On the next screen, you will be able to see different Snowboards available to look at in detail. Feel free to click on any of them to see the Snowboard in detail!</string>
    <string name="snowboard_list_button">Go To Snowboard List!</string>
    <string name="instruction_button_text">Click the Button Below!</string>
    <string name="about">about</string>
    <string name="rules">Rules</string>
    <string name="logout">Logout</string>
    <string name="snowboard_name_label">Snowboard Name:</string>
    <string name="snowboard_size_label">Snowboard Size:</string>
    <string name="snowboard_brand_label">Snowboard Brand:</string>
    <string name="snowboard_description_label">Snowboard Description:</string>
    <string name="snowboard_name_hint">Snowboard Name</string>
    <string name="saveButton">Save</string>
</resources>