<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.zoose.snowboardstore.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_text"
            app:layout_constraintEnd_toStartOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_text"
            app:layout_constraintEnd_toStartOf="@+id/password_text"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:onClick="@{ () -> loginViewModel.onCreateAccount() }"
            android:text="@string/create_account"
            app:layout_constraintBaseline_toBaselineOf="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{ () -> loginViewModel.onLoginToAccount() }"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_example"
            android:ems="10"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.823"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"
            app:layout_constraintVertical_bias="0.36" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/confirm_password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.823"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            app:layout_constraintVertical_bias="0.19999999" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{ () -> loginViewModel.submitLogin() }"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_label"
            app:layout_constraintVertical_bias="0.19999999" />

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"

            app:layout_constraintBaseline_toBaselineOf="@+id/confirm_password_text"
            app:layout_constraintEnd_toStartOf="@+id/confirm_password_text"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/confirm_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:ems="10"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/submit_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.823"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            app:layout_constraintVertical_bias="0.04000002"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


