<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instruction_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instruction.InstructionFragment">

        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_button_text"
            app:layout_constraintBottom_toTopOf="@+id/snoboard_list_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/overview_text"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.344" />

        <Button
            android:id="@+id/snoboard_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snowboard_list_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/welcome_text"
            app:layout_constraintVertical_bias="0.375" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
